2007-07-24  mefyl  <mefyl@lrde.epita.fr>

	Build and pretty-print ListExp ast nodes.
	* dev/ast-pretty-printer-gen: Don't warn about unused variables.
	* src/ast/ast.yml: Add printer for ListExp.
	* src/parser/bison/ugrammar.y: Build ListExp ast node.

2007-07-24  Akim Demaille  <demaille@gostai.com>

	rContext
	* src/object/fwd.hh (APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT)
	(APPLY_ON_ALL_PRIMITIVES): New.
	* src/object/atom.hh, src/object/atom.hxx (kernel/fwd.hh):
	Include to get UConnection.
	(context_traits): New.
	Fix Doc.
	(op<<(UConnection)): New.
	* src/object/object.hh, src/object/object.cc: Handle ALL
	primitives, not just GLOBAL.
	* src/object/primitives.cc (context_class_initialize): New.
	(root_classes_initialize): Call it.
	Use APPLY_ON_ALL_PRIMITIVES_*, since Context is to handle too.
	* src/runner/runner.hh, src/runner/runner.hxx (Runner::Runner):
	Take a UConnection as arg.
	(context_): New.
	(target): Use it.
	(rContext): New typedef.
	* src/uconnection.cc: Adjust Runner construction.

2007-07-24  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Update externals.
	* configure.ac: List kernelteam@gostai.com.

2007-07-24  Akim Demaille  <demaille@gostai.com>

	ALL => GLOBAL
	* src/object/atom.hxx, src/object/fwd.hh, src/object/object.cc,
	* src/object/object.hh, src/object/primitives.cc
	(APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT, APPLY_ON_ALL_PRIMITIVES):
	Rename as...
	(APPLY_ON_GLOBAL_PRIMITIVES_BUT_OBJECT, APPLY_ON_GLOBAL_PRIMITIVES):
	these.

2007-07-24  mefyl  <mefyl@lrde.epita.fr>

	Reduce code duplication. Use strings instead of char*.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Use std::string instead of char*.
          Add accessors for errors and warnings handling.
	* src/uconnection.cc,
	* src/uexpression.cc: Use the new interface for
          errors and warnings handling.

2007-07-24  Akim Demaille  <demaille@gostai.com>

	Add k2 tests
	* tests-local.mk (TESTS): Extend it.

2007-07-24  mefyl  <mefyl@lrde.epita.fr>
