@@ -1,3 +1,8 @@
+2007-07-24  Akim Demaille  <demaille@gostai.com>
+
+	Give details on failures
+	* src/object/object.cc (lookup): Send a readable exception.
+
 2007-07-24  mefyl  <mefyl@lrde.epita.fr>
 
 	Build and pretty-print ListExp ast nodes.
